fix h2 spacings

--- a/themes/clean-blog/source/css/base.styl
+++ b/themes/clean-blog/source/css/base.styl
@@ -8,7 +8,7 @@ body
 
 p
   line-height 1.5
-  margin 30px 0
+  margin 15px 0
 
 p, li
   a
@@ -197,7 +197,7 @@ hr.small
 
 .caption
   text-align center
-  font-size 14px
+  font-size 15px
   padding 10px
   font-style italic
   margin 0
@@ -208,7 +208,6 @@ hr.small
 .post-tags, .post-categories
   font-size 15px
   margin-top 30px
-  margin-bottom 30px
   a
     border-bottom 1px dotted #ABABAB
     text-transform uppercase
